<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--
        as the layout is simple with views fills one line per time, linear
        layout is enough
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_prod_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/product_name_reg"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_prod_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/product_size_reg"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_prod_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/product_company_reg"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_prod_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:hint="@string/product_description_reg"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/product_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_reg"
            android:backgroundTint="@color/startColor"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/endColor"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/product_register_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/cancel_reg"
            android:textSize="20sp"
            android:backgroundTint="@color/startColor"
            android:textColor="@color/endColor"/>
    </LinearLayout>

</layout>
