<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoestore.ui.fragment.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoestore.ui.fragment.welcome.WelcomeFragment"
        android:label="@string/welcome_bar_txt" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="userName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.shoestore.ui.fragment.instructions.InstructionsFragment"
        android:label="@string/inst_bar_txt" >
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.example.shoestore.ui.fragment.shoelist.ShoeListFragment"
        android:label="@string/list_bar_txt" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_shoeListFragment_to_addItemFragment"
            app:destination="@id/addItemFragment"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="shoeName"
            app:argType="string" />
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.example.shoestore.ui.fragment.shoedetail.ShoeDetailFragment"
        android:label="@string/detail_bar_txt">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.example.shoestore.ui.fragment.additem.AddItemFragment"
        android:label="@string/add_bar_txt" >
        <action
            android:id="@+id/action_addItemFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
</navigation>