<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--
    the view are grouping relatively among themselves;
    it's more easy to work with constraint;
    the bottom buttons are aligned and equally spaced using chain
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/page_two_img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/page_img2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/page_two_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_two_img"
            app:layout_constraintVertical_bias="0.3"
            android:text="@string/page_instruction_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/page_tow_btn"
            style="@style/pageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_btn_nxt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/page_two_back_btn"
            app:layout_constraintTop_toBottomOf="@+id/page_two_txt"
            app:layout_constraintVertical_bias="0.6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/page_two_back_btn"
            style="@style/pageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_back_btn"
            app:layout_constraintBottom_toBottomOf="@+id/page_tow_btn"
            app:layout_constraintEnd_toStartOf="@+id/page_tow_btn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/page_tow_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
